Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-14545

sdktool cannot find toolchains written by older version

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • Qt Creator 3.4.1
    • Qt Creator 3.4.1
    • Installer
    • None
    • d1dd20aa31b99d6e708799fc07d9b14d2fdb68e2

      Currently updating the Qt online installer from Qt Creator 3.4.0 and Qt 5.4.0 MinGW to Qt Creator 3.4.1 and Qt 5.4.1 fails:

      D:\Qt\Opensource\Qt-online\/Tools/QtCreator\bin\sdktool.exe; addKit; --id; qt.54.win32_mingw491_kit; --name; Desktop Qt %{Qt:Version} MinGW 32bit; --toolchain; ProjectExplorer.ToolChain.Mingw:qt.tools.win32_mingw491; --qt; qt.54.win32_mingw491; --debuggerid; Debugger.qt.tools.win32_mingw491; --devicetype; Desktop; UNDOEXECUTE; D:\Qt\Opensource\Qt-online\/Tools/QtCreator\bin\sdktool.exe; rmKit; --id; qt.54.win32_mingw491_kit' failed: Execution failed(Unexpected exit code: 2)
      
      Toolchain ProjectExplorer.ToolChain.Mingw:qt.tools.win32_mingw491 does not exist.
      

      This is although the toolchain is properly registered:

      <?xml version="1.0" encoding="UTF-8"?>
      <!DOCTYPE QtCreatorToolChains>
      <!-- Written by sdktool , 2015-06-03T09:31:44. -->
      <qtcreator>
       <data>
        <variable>ToolChain.0</variable>
        <valuemap type="QVariantMap">
         <value type="QString" key="ProjectExplorer.GccToolChain.Path">C:\Qt\Qt5.4.2-mingw-enterprise\Tools\mingw491_32\bin\g++.exe</value>
         <valuelist type="QVariantList" key="ProjectExplorer.GccToolChain.SupportedAbis">
          <value type="QString">x86-windows-msys-pe-32bit</value>
         </valuelist>
         <value type="QString" key="ProjectExplorer.GccToolChain.TargetAbi">x86-windows-msys-pe-32bit</value>
         <value type="bool" key="ProjectExplorer.ToolChain.Autodetect">true</value>
         <value type="QString" key="ProjectExplorer.ToolChain.DisplayName">MinGW 4.9.1 32bit</value>
         <value type="QByteArray" key="ProjectExplorer.ToolChain.Id">ProjectExplorer.ToolChain.Mingw:qt.tools.win32_mingw491</value>
        </valuemap>
       </data>
       <data>
        <variable>ToolChain.Count</variable>
        <value type="int">1</value>
       </data>
       <data>
        <variable>Version</variable>
        <value type="int">1</value>
       </data>
      </qtcreator>
      

      However, the toolchain id is stored as a QByteArray, while commit b2e3f0262bbf5de4 in qt-creator enforces a QString.

        For Gerrit Dashboard: QTCREATORBUG-14545
        # Subject Branch Project Status CR V

            kkohne Kai Köhne
            kkohne Kai Köhne
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes