Fix parsing of old settings with sdktool

With commit 5aba7fb09504e1a the sdktool started to save id's in a QString
(instead of a QByteArray). Commit b2e3f0262bbf5de4 then adapted also the
parsing. However, this broke the parsing of existing settings still
using a QByteArray.

Task-number: QTCREATORBUG-14545
Change-Id: I6c991d9d130602c7e9b3146b4d7b17555056a8ef
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>